# AcademicAgent-Suite

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-ml-gpu.txt  requirements.txt  test_ingeston.py  test_reasoning.py
compiler/: __init__.py
compiler/dsl/: workflow.yaml
compiler/parser/: __init__.py
configs/: calibrator.py  magic-pdf.json  milvus_config.yaml  model_config.yaml  strategies.yaml  video_config.yaml
core/: __init__.py  asset_manager.py  assets_manager.py  chats_manager.py  ingestion_stream.py  prompt_manager.py  reasoning_stream.py  service_manager.py  session_manager.py  system_state.py  tools_manager.py
data_layer/: clip_worker_pdf.py  clip_worker_video.py  data_wrapper.py  json_messenger.py  messenger_wrapper.py  milvus_ingestor.py  search_wrapper.py  vector_search.py
deploy/: Dockerfile.gateway  Dockerfile.service_manager  docker-compose.gpu-bge.yml  docker-compose.gpu.yml  docker-compose.yml
docs/: ARCHITECTURE.md  CODEMAP.zh.md  DEPLOYMENT.md  MODELS_AND_GPU.md
frontend/: package.json
gateway/: __init__.py  app.py  chat_graph.py  chat_hooks.py  http_logging_middleware.py  outline_utils.py
logs/: sandbox_log.txt
requirements/: AudioTranscriptionExpert.yml  DataStreamOrchestrator.yml  DocParserCore.yml  ScientificSandbox.yml  VideoSemanticSlicer.yml  VisualReasoningEye.yml
scripts/: verify_stack.sh  warm_models.sh
shared/: __init__.py  embedding.py  evidence_format.py  http_utils.py  logging_config.py  paths.py  request_context.py  url_policy.py
(+77 files in other folders)
